plugins {
    id 'java'
}

group 'metalscraps.org.eso.lang.tool'
version '1.0-SNAPSHOT'

sourceCompatibility = 11

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"

jar {
    manifest {
        attributes 'Main-Class': 'org.metalscraps.eso.lang.kr.ToolMain'
    }
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compile project(':library')

    testCompile group: 'junit', name: 'junit', version: '4.12'


}
